# TIMESAT_CLI

./: COMMERCIAL-LICENSE.txt  LICENSE  README.md  TIMESAT_python.yml  compile_TIMESAT_linux_macOS.sh  main.py  pyproject.toml  readme.md  readme.txt  settings.json  settings_hrvpp2.json  settings_test.json  timesat_run.py
python_interface/: tsf2py.f90
src/timesat_cli/: __init__.py  __main__.py  config.py  fsutils.py  parallel.py  processing.py  readers.py  timevec.py
timesatimage/: config.py  processing.py  qa.py
