[project]
name = "timesat"
version = "4.1.7" 
authors = [
  {name= "Zhanzhang Cai"},
]
description = "HRVPP2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy>=2" ,
"scipy" ,
"pandas" ,
"matplotlib", 
"tqdm",
'rasterio',
'ray',
'meson>=1.1'
]

[dependency-groups]
dev = ["pre-commit", "ruff>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timesatimage"]