[project]
name = "timesatimage"
version = "4.1.7" 
authors = [
  {name= "Zhanzhang Cai"},
]
description = "HRVPP2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy>=2"
]

[dependency-groups] 
dev = ["pre-commit", "ruff", "matplotlib"]

[optional-dependencies]
extras = [
"pandas" ,
"tqdm",
'rasterio',
'ray',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timesatimage"]
