[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]  # <-- add hatch-vcs
build-backend = "hatchling.build"

[project]
name = "timesat-cli"
dynamic = ["version"]
description = "Python-based command line interface for TIMESAT"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Zhanzhang Cai" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Remote Sensing",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Environment :: Console",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  # your bindings
  "timesat",
]

[dependency-groups] 
dev = ["pre-commit", "ruff", "matplotlib"]

[optional-dependencies]
extras = [
"pandas" ,
"tqdm",
'rasterio',
'ray',
]

[tool.hatch.version]
source = "vcs"                                    # <-- tell Hatch to use Git tags

[project.scripts]
timesat = "timesat_cli.cli:main"         # installs `timesat` command
# or:
timesat-cli = "timesat_cli.cli:main"     # installs `timesat-cli` command

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["timesat_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["timesatimage"]
